Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33314

qlist.h: gcc signed overflow error when using -O2

    XMLWordPrintable

Details

    Description

      Compiling with gcc -O2 QtCore/qlist.h:622 will cause the following warning:
      include/QtCore/qlist.h:622:5: error: assuming signed overflow does not occur when assuming that (X - c) > X is always false [-Werror=strict-overflow]

      This warning can be seen when compiling qtcreator 2.8.1.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            kileppal Kimmo Leppälä
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes