Change an addition into a subtraction

This potentially resolves the long-standing warning from GCC:
 assuming signed overflow does not occur when assuming that (X + c) < X
 is always false

GCC prints the warning to warn people that you can't check for overflow
with signed integers by doing that (signed integers don't overflow in
the standard).

If we change this to X < X - c, there's no overflow.

Task-number: QTBUG-33314
Change-Id: I5b166610a39559ec7b03c4c31ee5999efefa0c06
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>

cregit: deb925b1b6dccec5c36a3d0a302fcb5ec58b040d https://github.com/qt/qtbase/commit/deb925b1b6dccec5c36a3d0a302fcb5ec58b040d